<resources>
    <string name="app_name">RSVP</string>
    <string name="title_activity_login">RSVP</string>
    <string name="pandora_logo">Pandora Logo Desc</string>
    <string name="submit">Good to Go</string>
    <string name="password_hint">Password</string>
    <string name="usename_hint">Username</string>
    <string name="RVSP">RSVP</string>
    <string name="at">\@</string>
    <string name="pandora">PANDORA</string>
    <string name="title_invitation_list">Invitations</string>
    <string name="auth_failure">Login failed. Check your credentials.</string>

    <string name="create_invitation_activity_title">Creating Invitation</string>
    <string name="create_invitation_activity_invitation_details_header">INVITATION DETAILS</string>
    <string name="create_invitation_activity_invitation_name">Invitation Name</string>
    <string name="create_invitation_activity_invitation_name_blank">Please enter an invitation name.</string>
    <string name="create_invitation_activity_invitation_description">Invitation Description</string>
    <string name="create_invitation_activity_invitation_description_blank">Please enter an invitation description.</string>
    <string name="create_invitation_activity_num_invitations_available">Number of Invitations Available</string>
    <string name="create_invitation_activity_num_invitations_blank">Please enter the number of invitations.</string>
    <string name="create_invitation_activity_rsvp_by">RSVP By</string>
    <string name="create_invitation_activity_rsvp_date_blank">Please press the \'Pick Date\' button a select the RSVP By date.</string>
    <string name="create_invitation_activity_email_dist_list">Email Distribution List</string>
    <string name="create_invitation_activity_email_blank">Please enter an email distribution list.</string>
    <string name="create_invitation_activity_email_invalid_format">Please enter a single email distribution address, e.g. dist-fyi-oak@pandora.com</string>
    <string name="create_invitation_activity_choosing_winners_header">CHOOSING WINNER(S)</string>
    <string name="create_invitation_activity_method_of_choice">Selection Method:</string>
    <string name="create_invitation_activity_see_preview_email">SEE PREVIEW EMAIL</string>
    <string name="create_invitation_activity_name_hint">Enter event name.</string>
    <string name="create_invitation_activity_desc_hint">Enter event description.</string>
    <string name="create_invitation_activity_pick_date_label">Pick Date</string>
    
    <string-array name="choice_array">
        <item>Random Order</item>
        <item>First Come, First Served</item>
        <!--
        <item>Manual Choice</item>
        -->
    </string-array>
    
    <string name="font_avenir">fonts/AvenirLTStd-light.ttf</string>
    <string name="font_avenir_pro">fonts/AvenirNextLTPro-Regular.otf</string>
    <string name="font_oswald">fonts/Oswald-Stencbab.ttf</string>

    <string name="dialog_invitation_preview_to_label">To:</string>
    <string name="dialog_invitation_preview_from_label">From:</string>
    <string name="dialog_invitation_preview_subject_label">Subject:</string>
    <string name="dialog_invitation_preview_send_label">SEND</string>
    <string name="dialog_invitation_preview_cancel_label">WHOOPS, NOT YET</string>
    
    <string name="dialog_wrap_up_messages_title">WRAP-UP MESSAGES</string>
    <string name="dialog_wrap_up_messages_message_to_winners">Message to Chosen Winners</string>
    <string name="dialog_wrap_up_messages_message_to_all">Message to All Responses</string>
    <string name="dialog_wrap_up_messages_send_label">SEND</string>
    <string name="dialog_wrap_up_messages_empty_winner_message">Please enter a message to the winners.</string>
    <string name="dialog_wrap_up_messages_empty_all_message">Please enter a message to everyone.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_invitation">CreateInvitationActivity</string>
    <string name="chosen">Chosen</string>
    <string name="responses">Responses</string>
    <string name="invite_failure">Failed to load invites :(</string>
    <string name="invitation_details">Invitation Details</string>
    <string name="email_chosen_responders">Send Final Email</string>
    <string name="select_winners">Pick Winners</string>
    <string name="error_selecting_winners">An error occurred.</string>
    <string name="from">Scheduled for:</string>
    <string name="invite_desc">Description:</string>
    <string name="selection_method">Selection Method:</string>
    <string name="invite_create_failed">Failed to create an offer.</string>
    <string name="live">Live</string>
    <string name="email_to">Email to:</string>
    <string name="no_resp">No one has responded yet.</string>
    <string name="action_refresh">Refresh</string>
    <string name="years_dist">Years</string>
    <string name="dept_dist">Departments</string>
    <string name="years_data">Years</string>
    <string name="dept_data">Department</string>
    <string name="full_up">Full Up</string>
    <string name="dud">this is a dud</string>
</resources>
