<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <!-- WRAP-UP MESSAGES -->

        <TextView
            android:id="@+id/dialog_email_preview_wrap_up_messages"
            style="@style/FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_label_and_edit_text"
            android:layout_marginTop="@dimen/field_label_margin_top"
            android:text="@string/dialog_wrap_up_messages_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Message to Chosen Winners -->

        <TextView
            android:id="@+id/dialog_preview_winner_msg"
            style="@style/FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_email_preview_wrap_up_messages"
            android:layout_marginBottom="@dimen/margin_between_label_and_edit_text"
            android:layout_marginTop="@dimen/field_label_margin_top"
            android:text="@string/dialog_wrap_up_messages_message_to_winners" />

        <EditText
            android:id="@+id/dialog_preview_winner_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_preview_winner_msg"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:theme="@style/AppTheme" />

        <!-- Message to All Responses -->

        <TextView
            android:id="@+id/dialog_preview_all_responses_label"
            style="@style/FieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_preview_winner_edit_text"
            android:layout_marginBottom="@dimen/margin_between_label_and_edit_text"
            android:layout_marginTop="@dimen/field_label_margin_top"
            android:text="@string/dialog_wrap_up_messages_message_to_all" />

        <EditText
            android:id="@+id/dialog_preview_all_responses_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_preview_all_responses_label"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:theme="@style/AppTheme" />

        <!-- SEND button -->

        <Button
            android:id="@+id/dialog_wrap_up_send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_preview_all_responses_edit_text"
            android:layout_marginTop="15dp"
            android:padding="@dimen/text_border_padding"
            android:text="@string/dialog_wrap_up_messages_send_label"
            android:textColor="@android:color/white"
            android:theme="@style/AppTheme" />
    </RelativeLayout>
</ScrollView>
